--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "stream-pipe",
   "version": "1.0.0",
-  "description": "",
+  "description": "add stream.pipeFrom",
+  "keywords": [
+    "from",
+    "fs",
+    "pipeFrom",
+    "pipe",
+    "readable",
+    "stream",
+    "transform",
+    "writeable"
+  ],
   "homepage": "https://github.com/bluelovers/node-stream-pipe#readme",
   "bugs": {
     "url": "https://github.com/bluelovers/node-stream-pipe/issues"
@@ -18,6 +28,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/node": "^9.6.2"
+    "@types/node": "^9.6.2",
+    "through2": "^2.0.3"
   }
 }
